# cabal-portage

./: .gitmodules  CHANGELOG.md  cabal-portage.cabal  cabal.project  hie.yaml
.github/workflows/: 01-semigroupoids-slim.yml  02-parsable.yml  03-portage-hs.yml  04-cabal-portage.yml  cabal-3_4.yml  cabal-portage.yml  haskell.yml
cabal-portage/: README.md  cabal-portage.cabal
cabal-portage/app/: Main.hs
cabal-portage/src/Distribution/Portage/: Cabal.hs
cabal-portage/src/Distribution/Portage/Cabal/: Error.hs
cabal-portage/test/: Main.hs
cabal-portage/test/Test/: Portage.hs
parsable/: CHANGELOG.md  parsable.cabal
parsable-test/: CHANGELOG.md  LICENSE  parsable-test.cabal
parsable-test/src/Test/: Parsable.hs
parsable/src/Data/: Parsable.hs
parsable/test/: Main.hs
portage-hs/: CHANGELOG.md  portage-hs.cabal
portage-hs/src-exposed/Distribution/Portage/: Types.hs
portage-hs/src-internal/Internal/Distribution/Portage/: Types.hs
portage-hs/src/Distribution/Portage/: Emerge.hs  PkgDb.hs  Types.hs
portage-hs/src/Distribution/Portage/Emerge/: Parser.hs
portage-hs/src/Distribution/Portage/PkgDb/: Contents.hs
portage-hs/src/Distribution/Portage/Types/: DepGroup.hs  DepSpec.hs  Internal.hs  Package.hs  UseDep.hs  Version.hs  VersionedPkg.hs
portage-hs/src/Internal/Distribution/Portage/: Emerge.hs  PkgDB.hs  Types.hs
portage-hs/src/Internal/Distribution/Portage/Emerge/: Parser.hs
portage-hs/test/: GentooTests.hs  Main.hs  UnitTests.hs  ValidityTests.hs
portage-hs/test/Emerge/: GentooTests.hs  ParserTests.hs
portage-hs/test/PkgDB/: GentooTests.hs
portage-hs/test/PkgDb/: GentooTests.hs
portage-hs/test/Types/: GentooTests.hs  UnitTests.hs  ValidityTests.hs
portage-hs/test/data/2022-07-16/: emerge-world-test.stderr  emerge-world-test.stdout
semigroupoids-slim/: semigroupoids-slim.cabal
src/Distribution/Cabal/: Portage.hs
