cabal-version:      3.0
name:               cabal-portage
version:            0.1.0.0
synopsis:           Common interface between Cabal and Portage

-- A longer description of the package.
-- description:
homepage:           https://github.com/hololeap/cabal-portage

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

common all
    ghc-options:         -Weverything
                         -Wno-missing-exported-signatures
                         -Wno-missing-import-lists
                         -Wno-missed-specialisations
                         -Wno-all-missed-specialisations
                         -Wno-unsafe
                         -Wno-safe
                         -Wno-missing-safe-haskell-mode
                         -Wno-missing-local-signatures
                         -Wno-implicit-prelude
                         -Wno-prepositive-qualified-module
                         -foptimal-applicative-do

library cabal-portage-external-libs-cabal-install-solver
    default-language: Haskell2010
    hs-source-dirs:   cabal/cabal-install-solver/src
    hs-source-dirs:   cabal/cabal-install-solver/src-assertion
    ghc-options:
        -Wall -Wcompat -Wnoncanonical-monad-instances
        -fwarn-tabs -fwarn-incomplete-uni-patterns

    if impl(ghc <8.8)
        ghc-options: -Wnoncanonical-monadfail-instances
    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

    exposed-modules:
        Distribution.Client.Utils.Assertion

        Distribution.Solver.Compat.Prelude
        Distribution.Solver.Modular
        Distribution.Solver.Modular.Assignment
        Distribution.Solver.Modular.Builder
        Distribution.Solver.Modular.Configured
        Distribution.Solver.Modular.ConfiguredConversion
        Distribution.Solver.Modular.ConflictSet
        Distribution.Solver.Modular.Cycles
        Distribution.Solver.Modular.Dependency
        Distribution.Solver.Modular.Explore
        Distribution.Solver.Modular.Flag
        Distribution.Solver.Modular.Index
        Distribution.Solver.Modular.IndexConversion
        Distribution.Solver.Modular.LabeledGraph
        Distribution.Solver.Modular.Linking
        Distribution.Solver.Modular.Log
        Distribution.Solver.Modular.Message
        Distribution.Solver.Modular.Package
        Distribution.Solver.Modular.Preference
        Distribution.Solver.Modular.PSQ
        Distribution.Solver.Modular.RetryLog
        Distribution.Solver.Modular.Solver
        Distribution.Solver.Modular.Tree
        Distribution.Solver.Modular.Validate
        Distribution.Solver.Modular.Var
        Distribution.Solver.Modular.Version
        Distribution.Solver.Modular.WeightedPSQ
        Distribution.Solver.Types.ComponentDeps
        Distribution.Solver.Types.ConstraintSource
        Distribution.Solver.Types.DependencyResolver
        Distribution.Solver.Types.Flag
        Distribution.Solver.Types.InstalledPreference
        Distribution.Solver.Types.InstSolverPackage
        Distribution.Solver.Types.LabeledPackageConstraint
        Distribution.Solver.Types.OptionalStanza
        Distribution.Solver.Types.PackageConstraint
        Distribution.Solver.Types.PackageFixedDeps
        Distribution.Solver.Types.PackageIndex
        Distribution.Solver.Types.PackagePath
        Distribution.Solver.Types.PackagePreferences
        Distribution.Solver.Types.PkgConfigDb
        Distribution.Solver.Types.Progress
        Distribution.Solver.Types.ResolverPackage
        Distribution.Solver.Types.Settings
        Distribution.Solver.Types.SolverId
        Distribution.Solver.Types.SolverPackage
        Distribution.Solver.Types.SourcePackage
        Distribution.Solver.Types.Variable

    build-depends:
        , array         >=0.4
        , base
        , binary        >=0.7.3
        , bytestring    >=0.10.6.0
        , Cabal
        , containers    >=0.5.6.2
        , filepath
        , mtl           >=2.0
        , pretty        ^>=1.1
        , transformers  >=0.4.2.0

library
    import: all
    exposed-modules:  Distribution.Cabal.Portage

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13 && <5
                    , Cabal >=3.0.1.0
                    , directory >=1.3.6.0
                    , filepath  >=1.4.0.0
                    , parsec >=3.1.14.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable cabal-portage
    import: all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        cabal-portage

    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite cabal-portage-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:    base
