cabal-version:      3.0
name:               parsable-test
version:            0.1.0.0
synopsis:           Test functions for the parsable package

-- A longer description of the package.
-- description:
homepage:
    https://github.com/hololeap/cabal-portage/tree/main/parsable-test

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Testing
extra-source-files: CHANGELOG.md

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Weverything
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-local-signatures
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-deriving-strategies
                        -Wno-deriving-typeable
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

library
    import: all
    exposed-modules:  Test.Parsable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.15.1.0
--        , megaparsec
        , parsable
        , QuickCheck
        , stm >=2.5
        , tasty
        , tasty-quickcheck
    hs-source-dirs:   src
    default-language: Haskell2010
