cabal-version:      3.0
name:               parsable-test
version:            0.1.0.0
synopsis:           Test functions for the parsable package

tested-with:        GHC == { 8.10.7, 9.0.2 }

-- description:
homepage:           https://github.com/hololeap/cabal-portage/tree/main/parsable-test
bug-reports:        https://github.com/hololeap/cabal-portage/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

copyright:          Copyright (C) 2022 hololeap
category:           Testing
extra-source-files: CHANGELOG.md

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

flag verbose-tests
    description: Add extra noise to QuickCheck tests (label with test strings)
    default:     False
    manual:      True

-- GHC 8.8 doesn't like the big list of -Wno-*
common all
    ghc-options:        -Weverything
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-local-signatures
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-deriving-strategies
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

library
    import: all
    exposed-modules:  Test.Parsable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.13 && <5
        , parsable
        , QuickCheck
        , stm >=2.5
        , tasty
        , tasty-quickcheck
    hs-source-dirs:   src
    default-language: Haskell2010

    if flag(verbose-tests)
        CPP-Options:
            -DVERBOSE_TESTS
