cabal-version:      3.0
name:               parsable-test
version:            0.1.0.0
synopsis:           Test functions for the parsable package

tested-with:        GHC == { 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.1 }

description:
    Provides QuickCheck generators and HUnit assertions for testing
    the round-trip assurances of types with both Parsable and Printable
    instances.

homepage:           https://github.com/gentoo-haskell/cabal-portage/tree/main/parsable-test
bug-reports:        https://github.com/gentoo-haskell/cabal-portage/issues

license:            AGPL-3.0-only
license-file:       LICENSE
author:             Gentoo Authors
maintainer:         hololeap@protonmail.com

copyright:          Copyright (C) 2022-2025 Gentoo Authors
category:           Testing
extra-doc-files:
    , CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/gentoo-haskell/cabal-portage.git
    branch:         main
    subdir:         parsable-test

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

flag verbose-tests
    description: Add extra noise to QuickCheck tests (label with test strings)
    default:     False
    manual:      True

common all
    ghc-options:        -Wall
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

library
    import: all
    exposed-modules:  Test.Parsable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.13 && <4.22
        , parsable <0.2
        , mtl >=2.2.2 && <2.4
        , stm >=2.5 && <2.6
        , tasty <1.6
        , tasty-hunit <0.11
        , tasty-quickcheck <0.12
    hs-source-dirs:   src
    default-language: Haskell2010

    if flag(verbose-tests)
        CPP-Options:
            -DVERBOSE_TESTS
