cabal-version:      3.0
name:               parsable
version:            0.1.0.0
synopsis:           Parsable and Printable classes

tested-with:        GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.2 }

-- description:
homepage:           https://github.com/hololeap/cabal-portage/tree/main/parsable-hs
bug-reports:        https://github.com/hololeap/parsable-hs/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

copyright:          Copyright (C) 2022 hololeap
category:           Text
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/cabal-portage/tree/main/parsable-hs
    branch:         main

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Weverything
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-local-signatures
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-deriving-strategies
                        -Wno-deriving-typeable
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

library
    import: all
    exposed-modules:
        , Data.Parsable


    other-extensions:
        , ConstrainedClassMethods
        , DefaultSignatures
        , DeriveTraversable
        , FlexibleContexts
        , FlexibleInstances
        , LambdaCase
        , TypeFamilies

    build-depends:
        , base >=4.13 && <5
--        , bifunctors
--        , mtl >=2.2.2
        , megaparsec
--        , parser-combinators
        , transformers >=0.5.6.2
        , text >=1.2.4.0
--        , semigroupoids >=5.3.6
    hs-source-dirs:   src
    default-language: Haskell2010

    other-extensions:
        , ConstrainedClassMethods
        , DefaultSignatures
        , DeriveGeneric
        , DeriveTraversable
        , DerivingVia
        , FlexibleContexts
        , FlexibleInstances
        , GeneralizedNewtypeDeriving
        , LambdaCase
        , ScopedTypeVariables
        , TypeApplications
        , TypeFamilies
