cabal-version:      3.0
name:               portage-hs
version:            0.1.0.0
synopsis:           Data structures for interacting with the Portage package manager

tested-with:        GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.2 }

-- description:
homepage:           https://github.com/hololeap/cabal-portage/tree/main/portage-hs
bug-reports:        https://github.com/hololeap/cabal-portage/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

copyright:          Copyright (C) 2022 hololeap
category:           System
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/cabal-portage/tree/main/portage-hs

flag gentoo-tests
    description: Enable tests that depend on a working Gentoo environment
    default:     False
    manual:      True

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Weverything
                        -Wno-missing-exported-signatures
                        -Wno-missing-import-lists
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-local-signatures
                        -Wno-implicit-prelude
                        -Wno-missing-deriving-strategies
                        -foptimal-applicative-do
    if impl(ghc >= 8.10)
        ghc-options:    -Wno-missing-safe-haskell-mode
                        -Wno-prepositive-qualified-module
    if impl(ghc >= 9.2)
        ghc-options:    -Wno-missing-kind-signatures
    if flag(pedantic)
        ghc-options:    -Werror

common fast
    ghc-options:        -O2
                        -threaded
                        -with-rtsopts=-N

library
    import: all
    exposed-modules:
        , Distribution.Portage.Types

    other-extensions: NoImplicitPrelude
    build-depends:    portage-hs-internal
    hs-source-dirs:   src-exposed
    default-language: Haskell2010

library portage-hs-internal
    import: all
    exposed-modules:
        , Internal.Distribution.Portage.Types
        , Internal.Distribution.Portage.Emerge
        , Internal.Distribution.Portage.Emerge.Parser

    build-depends:
        , base >=4.13 && <5
        , containers >=0.6.2.1
        , megaparsec
        , parser-combinators
        , process >=1.6.9.0
        , text >=1.2.4.0
        , parsable
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite portage-hs-test
    import: all, fast
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        , Emerge.ParserTests
        , Types.ValidityTests
        , Types.UnitTests
    build-depends:
        , base
        , directory >=1.3.6.0
        , filepath >=1.4.0.0
        , megaparsec
        , portage-hs-internal
        , parsable
        , parsable-test
        , QuickCheck
        , tasty
        , tasty-hunit
        , text
        , transformers >=0.5.6.2

    if flag(gentoo-tests)
        CPP-Options:
            -DGENTOO_TESTS
        other-modules:
            , Emerge.GentooTests
            , Types.GentooTests
