cabal-version:      3.0
name:               portage-hs
version:            0.1.0.0
synopsis:           Data structures and functions for interacting with the Portage package manager

tested-with:        GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.2 }

description:
    Currently, this includes:

    * data structures for package atoms
    * parsers for atoms, emerge output, and CONTENTS files
    * functions for running emerge
    * lots of tests

homepage:           https://github.com/hololeap/cabal-portage/tree/main/portage-hs
bug-reports:        https://github.com/hololeap/cabal-portage/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

copyright:          Copyright (C) 2022 hololeap
category:           System
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/cabal-portage/tree/main/portage-hs

flag gentoo-tests
    description: Enable tests that depend on a working Gentoo environment
    default:     False
    manual:      True

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Wall
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

    default-extensions:
        , StrictData

common fast
    ghc-options:        -threaded
                        -with-rtsopts=-N

library
    import: all
    exposed-modules:
        , Distribution.Portage.Types
        , Distribution.Portage.PkgDb
        , Distribution.Portage.PkgDb.Contents
        , Distribution.Portage.Emerge
        , Distribution.Portage.Emerge.Parser

    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:
        , base >=4.13 && <5
        , containers
        , directory
        , filepath
        , mtl
        , process
        , text
        , transformers
        , parsable
        , portage-hs-internal

    other-extensions:
        , ApplicativeDo
        , FlexibleContexts
        , LambdaCase
        , NoImplicitPrelude
        , OverloadedStrings
        , ScopedTypeVariables
        , TypeFamilies

library portage-hs-internal
    import: all
    exposed-modules:
        , Internal.Distribution.Portage.Types

    build-depends:
        , base
        , parsable
    hs-source-dirs:   src-internal
    default-language: Haskell2010
    other-extensions:
        , DeriveDataTypeable
        , DeriveGeneric
        , DerivingVia
        , FlexibleContexts
        , FlexibleInstances
        , GeneralizedNewtypeDeriving
        , LambdaCase
        , MultiParamTypeClasses
        , OverloadedStrings
        , ScopedTypeVariables
        , TypeApplications
        , TypeFamilies
        , UndecidableInstances

test-suite portage-hs-test
    import: all, fast
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        , Emerge.ParserTests
        , Types.ValidityTests
        , Types.UnitTests
    build-depends:
        , base
        , containers
        , directory
        , filepath
        , portage-hs
        , portage-hs-internal
        , parsable
        , parsable-test
        , QuickCheck
        , tasty
        , tasty-hunit
        , text
        , transformers

    other-extensions:
        , CPP
        , FlexibleContexts
        , LambdaCase
        , ScopedTypeVariables
        , TypeApplications
        , ViewPatterns

    if flag(gentoo-tests)
        build-depends:
            , pretty-simple
        CPP-Options:
            -DGENTOO_TESTS
        other-modules:
            , Emerge.GentooTests
            , PkgDb.GentooTests
            , Types.GentooTests
